--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,16 @@
 @import "tailwindcss";
 
+:root {
+  --header-tmp: #f1a960;
+  --header: #4f39f6;
+  --text: #ffffff;
+  --text-notice: #364153;
+  --select: #ffffff;
+  --btn: #155dfc;
+  --btn-hover: #1447e6;
+  --btn-text: #ffffff;
+}
+
 @layer base {
   body {
     font-family: 'Inter', sans-serif;
